postgres.yaml

apiVersion: apps/v1

kind: Deployment

metadata:

  name: postgres

spec:

  replicas: 1

  selector:

    matchLabels:

      app: postgres

  template:

    metadata:

      labels:

        app: postgres

    spec:

      containers:

        - name: postgres

          image: nguthi9876/pegapostgres:11

          ports:

            - containerPort: 5432

          volumeMounts:

            - mountPath: /var/lib/postgresql/data

              name: postgres-storage

      volumes:

        - name: postgres-storage

          persistentVolumeClaim:

            claimName: postgres-pvc

---

apiVersion: v1

kind: Service

metadata:

  name: postgres

spec:

  selector:

    app: postgres

  ports:

    - protocol: TCP

      port: 5432

      targetPort: 5432

  clusterIP: None  # Headless service for stable DNS
