ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pega-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: pega.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pega
            port:
              number: 80
